--- a/stiless.css
+++ b/stiless.css
@@ -114,6 +114,7 @@ h1 {
   height: 6rem;
   background-color: #212429;
   padding: 1.5rem;
+  font-family: "MonRegular";
 }
 
 .options-footer {
@@ -177,6 +178,7 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 100%;
+    font-family: "MonRegular";
   }
 
   #footer {
